--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+.next/
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # testing
 /coverage
